# My_repo

./: .gitignore  data.yaml  hello.py  pyproject.toml  wandb.ipynb
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml  results.csv
